5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1723_2506.log
== TEST (2019-05-11 14:08:06) 
-- CODE:
p = int(input("quantidade de tambaquis: "))
c = float(input("crescimento ao ano: "))
v = int(input("quantidade de peixes para a venda: "))
lim = 12000
t = 0
while (0 < p < 12000 ) 
	p = p + c*p/100 - v
	t = t + 1
if p <= 0:
	print("EXTINCAO")
	if p == 0:
		print(t)
	else:
		print(t)
elif p >= 12000:
	print("LIMTE")
	if p == 12000:
		print(t)
	else:
		print(t)
-- ERROR:
File "XXXX", line 6
    while (0 < p < 12000 ) 
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:08:17) 
-- CODE:
p = int(input("quantidade de tambaquis: "))
c = float(input("crescimento ao ano: "))
v = int(input("quantidade de peixes para a venda: "))
lim = 12000
t = 0
while (0 < p < 12000 ) 
	p = p + c*p/100 - v
	t = t + 1
if p <= 0:
	print("EXTINCAO")
	if p == 0:
		print(t)
	else:
		print(t)
elif p >= 12000:
	print("LIMTE")
	if p == 12000:
		print(t)
	else:
		print(t)
-- ERROR:
File "XXXX", line 6
    while (0 < p < 12000 ) 
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:09:28) 
-- CODE:
p = int(input("quantidade de tambaquis: "))
c = float(input("crescimento ao ano: "))
v = int(input("quantidade de peixes para a venda: "))
lim = 12000
t = 0
while (0 < p) and (p < 12000): 
	p = p + c*p/100 - v
	t = t + 1
if p <= 0:
	print("EXTINCAO")
	if p == 0:
		print(t)
	else:
		print(t)
elif p >= 12000:
	print("LIMTE")
	if p == 12000:
		print(t)
	else:
		print(t)
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 14:09:48) 
-- CODE:
p = int(input("quantidade de tambaquis: "))
c = float(input("crescimento ao ano: "))
v = int(input("quantidade de peixes para a venda: "))
lim = 12000
t = 0
while (0 < p) and (p < 12000): 
	p = p + c*p/100 - v
	t = t + 1
if p <= 0:
	print("EXTINCAO")
	if p == 0:
		print(t)
	else:
		print(t)
elif p >= 12000:
	print("LIMTE")
	if p == 12000:
		print(t)
	else:
		print(t)
-- EXECUTION TIME:
0.178756
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMTE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMTE
4
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 14:10:24) 
-- CODE:
p = int(input("quantidade de tambaquis: "))
c = float(input("crescimento ao ano: "))
v = int(input("quantidade de peixes para a venda: "))
lim = 12000
t = 0
while (0 < p) and (p < 12000): 
	p = p + c*p/100 - v
	t = t + 1
if p <= 0:
	print("EXTINCAO")
	if p == 0:
		print(t)
	else:
		print(t-1)
elif p >= 12000:
	print("LIMTE")
	if p == 12000:
		print(t)
	else:
		print(t-1)
-- EXECUTION TIME:
0.28133
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
13
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMTE
10
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMTE
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 14:12:18) 
-- CODE:
p = int(input("quantidade de tambaquis: "))
c = float(input("crescimento ao ano: "))
v = int(input("quantidade de peixes para a venda: "))
lim = 12000
t = 0
while (0 < p) and (p < 12000): 
	p = p + c*p/100 - v
	t = t + 1
if p <= 0:
	print("EXTINCAO")
	if p == 0:
		print(t)
	else:
		print(t)
elif p >= 12000:
	print("LIMTE")
	if p == 12000:
		print(t)
	else:
		print(t)
-- EXECUTION TIME:
0.184972
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMTE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMTE
4
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 14:24:55) 
-- CODE:
p = int(input("quantidade de tambaquis: "))
c = int(input("crescimento ao ano: "))
v = int(input("quantidade de peixes para a venda: "))
lim = 12000
t = 0
while (0 < p) and (p < 12000): 
	p = p + c*p/100 - v
	t = t + 1
if (p <= 0):
	print("EXTINCAO")
	print(t)
elif (p >= 12000):
	print("LIMTE")
	print(t)
-- EXECUTION TIME:
0.129924
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMTE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMTE
4
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:26:05) 
-- CODE:
p = int(input("quantidade de tambaquis: "))
c = int(input("crescimento ao ano: "))
v = int(input("quantidade de peixes para a venda: "))
lim = 12000
t = 0
while (0 < p) and (p < 12000): 
	p = p + c*p/100 - v
	t = t + 1
if (p <= 0):
	print("EXTINCAO")
	print(t)
elif (p >= 12000):
	print("LIMTE")
	print(t)
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:26:35) 
-- CODE:
p = int(input("quantidade de tambaquis: "))
c = int(input("crescimento ao ano: "))
v = int(input("quantidade de peixes para a venda: "))
lim = 12000
t = 0
while (0 < p) and (p < 12000): 
	p = p + c*p/100 - v
	t = t + 1
if (p <= 0):
	print("EXTINCAO")
	print(t)
elif (p >= 12000):
	print("LIMTE")
	print(t)
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:27:24) 
-- CODE:
p = int(input("quantidade de tambaquis: "))
c = int(input("crescimento ao ano: "))
v = int(input("quantidade de peixes para a venda: "))
lim = 12000
t = 0
while (0 < p) and (p < 12000): 
	p = p + c*p/100 - v
	t = t + 1
if (p <= 0):
	print("EXTINCAO")
	print(t)
elif (p >= 12000):
	print("LIMTE")
	print(t)
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 14:59:29) 
-- CODE:
p = int(input("quantidade de tambaquis: "))
c = int(input("crescimento ao ano: "))
v = int(input("quantidade de peixes para a venda: "))
lim = 12000
t = 0
while (0 < p) and (p < 12000): 
	p = p + c*p/100 - v
	t = t + 1
if (p <= 0):
	print("EXTINCAO")
	print(t)
elif (p >= 12000):
	print("LIMTIE")
	print(t)
-- EXECUTION TIME:
0.149717
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMTIE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMTIE
4
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 14:59:40) 
-- CODE:
p = int(input("quantidade de tambaquis: "))
c = int(input("crescimento ao ano: "))
v = int(input("quantidade de peixes para a venda: "))
lim = 12000
t = 0
while (0 < p) and (p < 12000): 
	p = p + c*p/100 - v
	t = t + 1
if (p <= 0):
	print("EXTINCAO")
	print(t)
elif (p >= 12000):
	print("LIMITE")
	print(t)
-- EXECUTION TIME:
0.188844
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
